update: UI and UX for public trip